SpanRelationSpanAdjust. Fixes.